# talk-talk

./: lefthook.yml
client/: .gitignore  .prettierignore  README.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.vue  main.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: lib.rs
client/src/api/: index.ts
client/src/components/ui/: index.ts
client/src/components/ui/button/: Button.vue
client/src/components/ui/refresh/: PullWindow.vue  index.ts
client/src/components/ui/sonner/: Sonner.vue
client/src/layouts/: Default.vue
client/src/layouts/footer/: index.ts
client/src/layouts/header/: DefaultHeader.vue  InboxHeader.vue  index.ts
client/src/layouts/sidebar/: Default.vue  index.ts
client/src/lib/: log.ts  utils.ts
client/src/locales/: en.ts
client/src/router/: index.ts
client/src/stores/: chats.ts  window.ts
client/src/views/: Server.vue  index.ts
client/src/websocket/: index.ts
server/: .gitignore  Cargo.toml  example.env
server/http/: health.http
server/src/: lib.rs  main.rs
server/src/config/: app.rs  cors.rs  mod.rs  postgres.rs  tls.rs
server/src/database/: mod.rs
server/src/middleware/: cors.rs
server/src/routes/: mod.rs
server/src/websocket/: handler.rs
