[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = [
  "macros",
  "http2",
  "ws",
  "json",
  "multipart",
] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
dotenvy = { git = "https://github.com/allan2/dotenvy", version = "0.15.7", features = [
  "macros",
] }
env_logger = "0.11.8"
log = "0.4.28"
rustls = { version = "0.23.35", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "postgres",
  "derive",
  "migrate",
] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }


[dev-dependencies.cargo-husky]
version = "1"
features = [
  "run-cargo-fmt",
  "run-cargo-clippy",
  "run-cargo-test",
  "precommit-hook",
]
